change folder and name for file js

--- a/index.html
+++ b/index.html
@@ -21,6 +21,6 @@
 
       <button>Play/Pause</button>
     </main>
-    <script src="./js/media.js"></script>
+    <script src="./assets/index.js"></script>
   </body>
 </html>
