add plugins for mute and unmute

--- a/index.html
+++ b/index.html
@@ -13,14 +13,13 @@
       <h1>PlatziMediaPlayer.js</h1>
       <p>An extensible media player.</p>
     </header>
-
     <main class="container">
       <video class="movie">
         <source src="./assets/BigBuckBunny.mp4" />
       </video>
-
-      <button>Play/Pause</button>
+      <button class="button1">Play/Pause</button>
+      <button class="button2">Mute/UnMute</button>
     </main>
-    <script src="./assets/index.js"></script>
+    <script type="module" src="./assets/index.js"></script>
   </body>
 </html>
