div for comments

--- a/index.html
+++ b/index.html
@@ -19,6 +19,59 @@
       </video>
       <button class="button1">Play/Pause</button>
       <button class="button2">Mute/UnMute</button>
+      <div>
+        <h1>COMENTS</h1>
+        <P>Regrese a Colombia 
+          luego de hacer la 
+          primera parte de mi 
+          Máster en Gestión 
+          Integral de la 
+          Construcción. <br> 
+          Mi búsqueda de empleo 
+          en Ingeniera Civil no 
+          rinde frutos y sucede 
+          algo que va a empeorar 
+          la situación.
+          COVID-19. <br> 
+          Mi novia me plantea la 
+          posibilidad de iniciar a 
+          estudiar algo nuevo que el mercado esta requiriendo.
+          ME REGALA UNA SUSCRIPCIÓN EN PLATZI
+          Sin dinero y con un computador que tenia mas de 10 años desde que inicie mi carrera universitaria, me desmotivo porque necesito un mejor equipo descarto esa posibilidad y empiezo a realizar cursos de desarrollo profesional. <br>
+          Angie (mi novia) me dice que hay alguien del mundo del desarrollo que esta regalando computadores que le escriba haber si nos ayuda, así que... le escribo por twitter.
+          Luego de mas de un mes al ver que nada ocurre decido estudiar sin importar que no tenga un buen computador porque...
+          Me ¡escribió!. He said "please don´t thank me or celebrate until it arrived" <br>
+          Really this happening?
+          Seguimos esperando y continuo estudiando, me regalan un super curso para iniciar a estudiar los fundamentos de programación en Make It Real. (¿Mas regalos?, ¿son señales?)
+          Luego de muchas veces decirme que dejara de ilusionarme algo dentro de mi decía "no dejes de intentarlo", le escribía para contarle sobre mi avance y decirle "don´t forget me"
+          Entonces un día por fin recibo mi computador nuevo junto con una pantalla inmensa. <br>
+          Toda esta gran experiencia me ha impulsado a ser mas proactiva, mas participativa y a mejorar mi confianza, aún estoy muy nueva en este mundo de la programación, siento que encontré un propósito nuevo para desarrollarme profesionalmente.
+          Regrese a Colombia 
+          luego de hacer la 
+          primera parte de mi 
+          Máster en Gestión 
+          Integral de la 
+          Construcción. <br> 
+          Mi búsqueda de empleo 
+          en Ingeniera Civil no 
+          rinde frutos y sucede 
+          algo que va a empeorar 
+          la situación.
+          COVID-19. <br> 
+          Mi novia me plantea la 
+          posibilidad de iniciar a 
+          estudiar algo nuevo que el mercado esta requiriendo.
+          ME REGALA UNA SUSCRIPCIÓN EN PLATZI
+          Sin dinero y con un computador que tenia mas de 10 años desde que inicie mi carrera universitaria, me desmotivo porque necesito un mejor equipo descarto esa posibilidad y empiezo a realizar cursos de desarrollo profesional. <br>
+          Angie (mi novia) me dice que hay alguien del mundo del desarrollo que esta regalando computadores que le escriba haber si nos ayuda, así que... le escribo por twitter.
+          Luego de mas de un mes al ver que nada ocurre decido estudiar sin importar que no tenga un buen computador porque...
+          Me ¡escribió!. He said "please don´t thank me or celebrate until it arrived" <br>
+          Really this happening?
+          Seguimos esperando y continuo estudiando, me regalan un super curso para iniciar a estudiar los fundamentos de programación en Make It Real. (¿Mas regalos?, ¿son señales?)
+          Luego de muchas veces decirme que dejara de ilusionarme algo dentro de mi decía "no dejes de intentarlo", le escribía para contarle sobre mi avance y decirle "don´t forget me"
+          Entonces un día por fin recibo mi computador nuevo junto con una pantalla inmensa. <br>
+          Toda esta gran experiencia me ha impulsado a ser mas proactiva, mas participativa y a mejorar mi confianza, aún estoy muy nueva en este mundo de la programación, siento que encontré un propósito nuevo para desarrollarme profesionalmente.</P>
+      </div>
     </main>
     <script type="module" src="./assets/index.js"></script>
   </body>
